# nix-dotfiles

./: .ansible-lint  .coverage  .dockerignore  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .yamllint  Brewfile  Dockerfile  Justfile  LICENSE  README.md  ansible.cfg  compose.yaml  flake.nix  go.mod  go.sum  package-lock.json  package.json  pyproject.toml  rumdl.schema.json
.github/: renovate.json
.github/workflows/: bun.yaml  dockerfile.yaml  go.yaml  python.yaml  renovate.yaml  spectrum.yaml  update-github-actions.yaml  validate-renovate.yaml
Formula/: ghostty-patched.rb  kanata-with-cmd.rb
ansible/: bootstrap.sh
ansible/inventory/: localhost.yml
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: bootstrap.yml  host.yml  userland.yml
ansible/plugins/filter/: dotfiles.py
ansible/tests/: test_dotfiles_filter.py
cmd/helium-browser/: main.go  main_test.go
cmd/terminal-theme-run/: main.go
cmd/zellij-theme-run/: main.go
containers/: fedora-smoke-test-packages.txt
containers/nix/: Containerfile  distrobox.ini
dotfiles/: .chezmoiexternal.toml.tmpl  .chezmoiignore  .chezmoiremove  dot_bash_profile.tmpl  dot_bashenv.tmpl  dot_bashrc.tmpl  dot_gitconfig.tmpl  dot_zshenv.tmpl  dot_zshrc.tmpl
dotfiles/.chezmoiscripts/: run_after_alt_tab_license.py.tmpl  run_after_desktop_integrations.py  run_after_desktop_integrations.sh  run_after_kanata.py.tmpl  run_after_raycast_beta_patch.py.tmpl  run_after_raycast_beta_patch.sh.tmpl  run_onchange_after_gnome_catppuccin_accent.py.tmpl  run_onchange_after_gnome_catppuccin_accent.sh.tmpl  run_onchange_after_install-vs-extensions.py.tmpl  run_onchange_after_install-vs-extensions.tmpl  run_onchange_after_terminal_app_catppuccin_pink.py.tmpl  run_onchange_after_terminal_app_catppuccin_pink.sh.tmpl  run_onchange_after_yazi_init.py.tmpl  run_onchange_after_yazi_init.sh.tmpl  run_onchange_after_zsh_bash_init.py  run_onchange_after_zsh_bash_init.py.tmpl  run_onchange_after_zsh_bash_init.sh
dotfiles/.chezmoitemplates/: agent_statusline_config.toml  catppuccin_broot_pink.hjson.tmpl  catppuccin_btop_pink.theme.tmpl  catppuccin_codex_tmtheme_pink.tmTheme.tmpl  catppuccin_ghostty_pink.conf.tmpl  catppuccin_glamour_pink.json.tmpl  catppuccin_palette.json  catppuccin_rgb  executable_fingerprint  ghostty_config.conf.tmpl  vscode_settings.json
dotfiles/dot_cache/broot/: init.bash.tmpl  init.zsh.tmpl
dotfiles/dot_cache/starship/: init.bash.tmpl  init.zsh.tmpl
dotfiles/dot_cache/zellij/: permissions.kdl.tmpl
dotfiles/dot_cache/zoxide/: init.bash.tmpl  init.zsh.tmpl
dotfiles/dot_codex/: config.toml.tmpl  private_config.toml.tmpl
dotfiles/dot_codex/computer-use/: config.json.tmpl
dotfiles/dot_codex/themes/: catppuccin-frappe-pink.tmTheme.tmpl  catppuccin-latte-pink.tmTheme.tmpl
dotfiles/dot_config/: starship.toml.tmpl
dotfiles/dot_config/atuin/: config.toml.tmpl
dotfiles/dot_config/broot/: conf.hjson.tmpl
dotfiles/dot_config/btop/: btop.conf
dotfiles/dot_config/eza/: theme.yml.tmpl
dotfiles/dot_config/fastfetch/: apple.txt  config.jsonc.tmpl  coreos.txt
dotfiles/dot_config/ghostty/: executable_zellij-theme-run.tmpl
dotfiles/dot_config/git/: catppuccin-delta.gitconfig.tmpl
dotfiles/dot_config/gitui/: theme.ron.tmpl
dotfiles/dot_config/gtk-3.0/: gtk.css
dotfiles/dot_config/helix/: config.toml  languages.toml
dotfiles/dot_config/jj/: config.toml.tmpl
dotfiles/dot_config/kanata/: kanata-macos-pebble.kbd  kanata-macos.kbd  kanata.kbd
dotfiles/dot_config/opencode/: opencode.json
dotfiles/dot_config/raycast/: bridge.cjs  disable-ai.mjs  keydump.cjs  profile.toml  raycast-db.mjs
dotfiles/dot_config/shell/: environment.sh.tmpl  interactive.bash.tmpl  interactive.common.sh.tmpl  interactive.zsh.tmpl  zoxide.bash.tmpl  zoxide.zsh.tmpl  zsh-syntax-highlighting.zsh.tmpl
dotfiles/dot_config/solaar/: rules.yaml
dotfiles/dot_config/yazi/: keymap.toml.tmpl  package.toml  yazi.toml.tmpl
dotfiles/dot_config/zellij/: config.kdl.tmpl
dotfiles/dot_pi/agent/: settings.json
dotfiles/dot_ssh/: config.tmpl
dotfiles/dot_ssh/known_hosts.d/: codeberg  github
hosts/linux/: configuration.nix  default.nix
internal/chromiumbrowser/: browser.go  config.go  config_test.go  cookies.go  cookies_test.go  defaults.go  defaults.toml  defaults_test.go  extensions.go  extensions_test.go  extensionstorage.go  extensionstorage_test.go  files_test.go  install.go  json.go  linux.go  macos.go  preferences.go  settings.go  settings_test.go  wrapper.go
internal/chromiumbrowser/extensions/: catalog.go  catalog_test.go  extensions.toml  install.go  patches.go  patches.toml
internal/chromiumbrowser/scripts/: wrapper.py  wrapper.sh
internal/codex/wrapper/: trust.go  trust_test.go
internal/common/archiveutil/: archiveutil.go  (+1 more)
internal/helium/: config.go  config_test.go  configure.go  defaults.toml  installer.go  settings.go  settings_test.go
internal/terminaltheme/: config.go  execution.go  terminaltheme_test.go  theme_terminal_unix.go
internal/themerunner/: execution.go  fs.go  integration.go  manifest.go  process.go  runners.toml  themerunner_test.go  types.go
internal/zellijtheme/: catppuccin_palette.json  config.go  execution.go  fs.go  manifest.go  runners.toml  runtime_defaults.toml  theme.go  theme_terminal_unix.go  zellij.go  zellijtheme_test.go
modules/cross/: nix.nix  nixpkgs.nix
modules/equicord/: settings.nix
modules/nixos/: config.nix  default.nix  desktop-packages.nix  ghidra-mcp.nix  gnome.nix  hardware.nix  kanata.nix  kde.nix  packages.nix  services.nix  shell.nix  zed-remote.nix
patches/ghostty/: 0001-surface-export-the-active-screen-with-scrollback.patch  0002-apprt-identify-terminal-scrollback-text.patch  0003-embedded-honor-command-wait-after-command-setting.patch  0004-gtk-edit-scrollback-in-a-temporary-surface.patch  0005-macos-edit-scrollback-in-a-temporary-surface.patch  0006-core-let-link-clicks-bypass-mouse-capture.patch
secrets/: secrets.yaml
spectrum/: Containerfile  build.sh
spectrum/nix-tools/: flake.nix
spectrum/scripts/: boot_artifacts.py  build.py
(+312 files in other folders)
